# aether

./: .gitignore  AGENTS.md  FEATURES.md  Makefile  README.md  SYNC.md  app.json  bun.lockb  docs.go  package-lock.json  package.json  swagger.json  swagger.yaml
.cursor/commands/: create-migration.md
.cursor/docs/: migrations.md
.github/: pull_request_template.md
app/: _layout.tsx
backend/: .env  BUILD_NOTES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  deploy.sh  docker-compose.libsql.yml  go.mod  go.sum  main.go  migrate-to-libsql.sh  run.sh
backend-old/: Dockerfile  deploy.sh  go.mod  go.sum
components/: ThemedText.tsx
desktop/: .env  .env.production  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc.json  .taurignore  biome.json  bun.lockb  index.html  orval.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prod-build.sh  tsconfig.json  vite.config.ts
desktop/src-tauri/: .cargo-watch.toml  .cargoignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/backend/: .generate-openapi.sh  Cargo.toml  MIGRATION_GUIDE.md  MILESTONE_7_SUMMARY.md  README.md  build.rs
desktop/src-tauri/backend/migrations/: 001_initial_schema.sql
desktop/src-tauri/backend/src/: error.rs  lib.rs  main.rs
desktop/src-tauri/backend/src/api/: mod.rs  openapi.rs  routes.rs
desktop/src-tauri/backend/src/commands/: entry.rs  goal.rs  mod.rs  sync.rs  tag.rs  task.rs  trash.rs
desktop/src-tauri/backend/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  schema.rs
desktop/src-tauri/backend/src/db/repositories/: activity.rs  goal.rs  mod.rs  task.rs
desktop/src-tauri/backend/src/handlers/: activity.rs  entry.rs  goal.rs  mod.rs  sync.rs  tag.rs  task.rs  trash.rs
desktop/src-tauri/backend/src/utils/: activity.rs  goal_period.rs  mod.rs
desktop/src-tauri/backend/tests/: integration_test.rs
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/libsql-replica/: local.db  local.db-client_wal_index  local.db-shm  local.db-wal  local.db.backup
desktop/src-tauri/migrations/: 001_initial_schema.sql  002_add_goal_instances_timestamps.sql  002_search_and_fts.sql  003_fts_triggers.sql  004_add_audio_transcription_tables.sql  004_media_and_transcription.sql  004_sync_infrastructure.sql  005_add_search_indexes.sql  005_sync_infrastructure.sql  005_vector_embeddings.sql  006_add_vector_embeddings.sql  007_add_canvas_tables.sql  007_search_documents.sql  008_add_bookmarks_table.sql  008_search_documents_fts.sql  009_search_embeddings.sql  010_ai_journal_enrichment.sql  011_fix_fts5_detail_for_phrase_queries.sql  012_add_sync_infrastructure_tables.sql  013_add_sync_columns_to_tables.sql  014_add_sync_triggers.sql  015_fix_vector_indexes.sql
desktop/src-tauri/migrations_backup_20260128_115759/: 003_create_activities_table.sql  005_add_search_indexes.sql  008_add_bookmarks_table.sql  009_make_media_entity_agnostic.sql  010_add_resource_links.sql  014_add_sync_triggers.sql
desktop/src-tauri/src/: error.rs  lib.rs  updater.rs
desktop/src-tauri/src/api/: openapi.rs
desktop/src-tauri/src/audio/: mod.rs  preprocessing.rs  recorder.rs  storage.rs
desktop/src-tauri/src/commands/: activity.rs  ai_journal.rs  audio.rs  bookmark.rs  canvas.rs  common.rs  embeddings.rs  entry.rs  goal.rs  link.rs  mod.rs  params.rs  search.rs  settings.rs  sync.rs  tag.rs  task.rs  transcription.rs  trash.rs  updater.rs
desktop/src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs  schema.rs
desktop/src-tauri/src/db/repositories/: activity.rs  ai_journal_enrichment.rs  bookmark.rs  canvas.rs  entry.rs  goal.rs  link.rs  media.rs  mod.rs  search.rs  search_document.rs  search_embedding.rs  settings.rs  tag.rs  task.rs  transcription.rs
desktop/src-tauri/src/handlers/: activity.rs  bookmark.rs  common.rs  entry.rs  goal.rs  mod.rs  search.rs  settings.rs  sync.rs  tag.rs  task.rs  trash.rs
desktop/src-tauri/src/journal_ai/: mod.rs
desktop/src-tauri/src/journal_ai/providers/: mod.rs  openai.rs  rules.rs
desktop/src-tauri/src/media/: storage.rs
desktop/src-tauri/src/openapi/: spec.json
desktop/src-tauri/src/settings/: encryption.rs  mod.rs
desktop/src-tauri/src/sync/: apply.rs  encryption.rs  engine.rs  media.rs  metadata.rs  mod.rs  outbox.rs  pull.rs  push.rs  register.rs  scheduler.rs  types.rs  ws.rs
desktop/src-tauri/src/transcription/: mod.rs  model_manager.rs  provider.rs  queue.rs
desktop/src-tauri/src/transcription/providers/: groq.rs  local_whisper.rs  mod.rs  openai.rs  self_hosted.rs
desktop/src-tauri/src/utils/: activity.rs  goal_period.rs  link_parser.rs  mod.rs  performance_ledger.rs  search_text.rs  timezone.rs  uuid.rs
desktop/src-tauri/src/utils/embeddings/: generator.rs  mod.rs  model_manager.rs
desktop/src-tauri/src/utils/metadata/: extractor.rs  mod.rs  providers.rs
desktop/src-tauri/src/utils/models/: common.rs  download.rs  mod.rs  types.rs  verify.rs
desktop/src-tauri/tests/: integration_test.rs
desktop/src-tauri/tools/: Cargo.toml
desktop/src-tauri/tools/src/: main.rs
docs/: readme.md
mobile/: .env  app.json  bun.lockb  package.json  polyfills.js
prod/: aether-backend.db
remote-replica/: .gitignore  README.md  docker-compose.yml  restore-backup.sh  setup-libsql.sh
schema/: acount.schama.ts  activity.schema.ts
sync-server/: Cargo.toml  Dockerfile  docker-compose.example.yml  docker-compose.yml
sync-server/data/: sync.db
sync-server/scripts/: benchmark-sync-server.mjs
sync-server/src/: handlers.rs  lib.rs  main.rs  models.rs  storage.rs
(+358 files in other folders)
