[package]
name = "aether-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "ws"] }
base64 = "0.21"
rand = "0.8"
bytes = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2.5"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
sha2 = "0.10"
hex = "0.4"
