[workspace]
members = ["tools"]

[package]
name = "Aether"
version = "0.1.0"
description = "something something app"
authors = ["casprine@thesunday.studio"]
edition = "2021"
default-run = "Aether"


# REMOVE these lines:
# [features]
# openapi-gen = []
# 
# [[bin]]
# name = "generate-openapi"
# path = "src/bin/generate-openapi.rs"
# required-features = ["openapi-gen"]

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-macos-haptics = "1.0.0"
tauri-plugin-updater = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (only for handler types used in OpenAPI spec generation)
axum = { version = "0.7", features = ["macros"] }

# Database
libsql = { version = "0.9" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI
utoipa = { version = "4", features = ["chrono"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"
directories = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"

# Human-readable duration parsing
humantime = "2.1"

# Audio processing
hound = "3.5"

# HTTP clients
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# HTML parsing
scraper = "0.20"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# System
gethostname = "0.4"

# Async traits
async-trait = "0.1"

# Local Whisper (optional - for future implementation)
# whisper-rs = "0.10"  # Uncomment when implementing local Whisper

# Model verification
sha2 = "0.10"

# Image processing
image = "0.24"
blurhash = "0.1"
tauri-plugin-keyring = "0.1.0"

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-test = "0.4"
