[package]
name = "aether-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aether-backend"
path = "src/main.rs"

[lib]
name = "aether_backend"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tower-log"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
libsql = { version = "0.9", features = ["replication", "remote"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"
