[package]
name = "aether-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aether-backend"
path = "src/main.rs"

[[bin]]
name = "generate-openapi"
path = "src/bin/generate-openapi.rs"

[lib]
name = "aether_backend"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (only for handler types used in OpenAPI spec generation)
axum = { version = "0.7", features = ["macros"] }

# Database
libsql = { version = "0.9", features = ["replication", "remote"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OpenAPI
utoipa = { version = "4", features = ["chrono"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
lazy_static = "1.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"

# Human-readable duration parsing
humantime = "2.1"

# Tauri (for commands)
tauri = { version = "2", features = [] }

[dev-dependencies]
# Testing
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
